# solocoder-5218-angular-rust-cdn

./: .gitignore
backend/: Cargo.toml
backend/src/: audit.rs  main.rs  models.rs  state.rs  validation.rs
backend/src/handlers/: node.rs  preheat.rs  purge.rs  resource.rs  stats.rs
backend/src/middleware/: auth.rs
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  proxy.conf.json  styles.css
frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
frontend/src/app/pages/dashboard/: dashboard.component.html  dashboard.component.ts
frontend/src/app/pages/nodes/: nodes.component.html  nodes.component.ts
frontend/src/app/pages/preheat/: preheat.component.html  preheat.component.ts
frontend/src/app/pages/purge/: purge.component.html  purge.component.ts
frontend/src/app/pages/resources/: resources.component.html  resources.component.ts
frontend/src/app/services/: api.service.ts  node.service.ts  preheat.service.ts  purge.service.ts  resource.service.ts  stats.service.ts
