[package]
name = "cdn-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
mime_guess = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rand = "0.8"
priority-queue = "1"
csv = "1"
lazy_static = "1"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]

[[bin]]
name = "cdn-manager"
path = "src/main.rs"
